[package]
name = "cerberus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "cerberus-cli"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
base64 = { version = "0.22.1", features = ["std"] }
clap = { version = "4.5.40", features = ["derive"] }
jni = "0.21.1"
openssl = { version = "0.10.73", features = ["vendored"] }
rand = "0.9.1"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zstd = "0.13.3"
